[package]
edition = "2021"
name = "robo_dialogue"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.46.0"
aws-sdk-polly = "0.16.0"
csv = "1.1"
serde = {version = "1.0", features = ["derive"]}
tokio = {version = "1", features = ["full"]}
